config/opensim/opensim-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opensimulator
  name: opensimulator
spec:
  selector:
    matchLabels:
      app: opensimulator
  replicas: 1
  template:
    metadata:
      labels:
        app: opensimulator
      name: opensimulator
    spec:
      os: 
        name: "windows"
      tolerations:
      - key: "os"
        value: "Windows"
        Effect: "NoSchedule"
      containers:
      - name: opensimulator
        image: mcr.microsoft.com/powershell:lts-nanoserver-ltsc2022
        imagePullPolicy: IfNotPresent
        command:
        - pwsh.exe
        - -command
        - $listener = New-Object System.Net.HttpListener; $listener.Prefixes.Add('http://*:80/'); $listener.Start();Write-Host('Listening at http://*:80/'); while ($listener.IsListening) { $context = $listener.GetContext(); $response = $context.Response; $content='<html><body><H1>Red Hat OpenShift + Windows Container Workloads</H1></body></html>'; $buffer = [System.Text.Encoding]::UTF8.GetBytes($content); $response.ContentLength64 = $buffer.Length; $response.OutputStream.Write($buffer, 0, $buffe [...]
        securityContext:
          runAsRoot: "false"
          windowsOptions:
            runAsUserName: "ContainerAdministrator"
      nodeSelector:
        kubernetes.io/os: windows
