config/opensim/opensim-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opensimulator
  name: opensimulator
spec:
  selector:
    matchLabels:
      app: opensimulator
  replicas: 1
  template:
    metadata:
      labels:
        app: opensimulator
      name: opensimulator
    spec:
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
      os: 
        name: "windows"
      tolerations:
      - key: "os"
        value: "Windows"
        effect: "NoSchedule"
      containers:
      - name: opensimulator
        image: quay.io/wgahnagl/opensimulator:0.0.0
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/os: windows
