config/opensim/opensim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensimulator
  label: opensimulator
spec:
  selector:
    "app" : "opensimulator"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
