config/opensim/opensim-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: opensimulator
spec:
  port:
    targetPort: 80 
  to:
    kind: Service
    name: opensimulator
